--- a/get-5-ready-to-hire-candidates-in-30-days.html
+++ b/get-5-ready-to-hire-candidates-in-30-days.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 23 2024 10:33:54 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Sep 27 2024 11:40:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6539ffd17e07d7b709c923a5" data-wf-site="6309a8f27ed27fa304d80a59" lang="en">
 <head>
   <meta charset="utf-8">
@@ -32,9 +32,7 @@
               <a href="#" class="mobile-brand w-nav-brand"><img src="images/logo-4.svg" loading="lazy" alt="" class="image-8"></a>
               <a href="hiring.html" class="nav-link p-w500-16-24 w-nav-link">I&#x27;M HIRING</a>
               <a href="job-hunting.html" class="nav-link p-w500-16-24 w-nav-link">I&#x27;M JOB HUNTING</a>
-              <a href="job-listings.html" class="nav-link p-w500-16-24 w-nav-link">SEARCH LATEST JOBS</a>
               <a href="about.html" class="nav-link p-w500-16-24 w-nav-link">ABOUT</a>
-              <a href="http://blog.blockrecruit.io" target="_blank" class="nav-link p-w500-16-24 w-nav-link">BLOGS</a>
               <a href="job-post.html" class="navbar-btn w-button">HIRE TALENT</a>
             </div>
           </nav>
@@ -228,7 +226,10 @@
       <section id="calander" class="section-h-cripto-list">
         <div class="container">
           <div data-w-id="6c431171-c099-7caa-eade-5a83df4c77b0" style="opacity:0" class="div-block-44">
-            <div class="html-embed-4 w-embed w-iframe"><iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0HF9kPruAEQTs3PPWfELLs7tYybPtcA1yrdrRU-J6T-vN00su5RPb9UH-ZmJnLn0vImEO2Flz8?gv=true" style="border: 0" width="100%" height="700" frameborder="0"></iframe></div>
+            <div class="html-embed-4 w-embed w-iframe"><!--  Google Calendar Appointment Scheduling begin  -->
+              <iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2mmmsRJs4lRcLY_MeAJJtIa499Ueb9ipdcTeMJoy3TYxM797XbB_8Ek73qCu6IuDvtU3kbAVKr?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
+              <!--  end Google Calendar Appointment Scheduling  -->
+            </div>
           </div>
         </div>
       </section>
@@ -241,20 +242,20 @@
               </div>
               <div class="about-item-wrap">
                 <div class="about-item">
-                  <div class="about-avatar-wrap"><img class="about-avatar" src="images/Ryan-Circle.png" alt="" style="opacity:0" sizes="100vw" data-w-id="2016e16d-b5a1-3235-071a-48741b825956" loading="lazy" srcset="images/Ryan-Circle-p-500.png 500w, images/Ryan-Circle-p-800.png 800w, images/Ryan-Circle-p-1080.png 1080w, images/Ryan-Circle-p-1600.png 1600w, images/Ryan-Circle-p-2000.png 2000w, images/Ryan-Circle.png 2400w"></div>
+                  <div class="about-avatar-wrap"><img class="about-avatar" src="images/Ryan-Circle.png" alt="" style="opacity:0" sizes="180px" data-w-id="2016e16d-b5a1-3235-071a-48741b825956" loading="lazy" srcset="images/Ryan-Circle-p-500.png 500w, images/Ryan-Circle-p-800.png 800w, images/Ryan-Circle-p-1080.png 1080w, images/Ryan-Circle-p-1600.png 1600w, images/Ryan-Circle-p-2000.png 2000w, images/Ryan-Circle.png 2400w"></div>
                   <div class="about-title">
-                    <h4 data-w-id="350c7353-76da-f2dd-2eed-a261eb183e29" style="opacity:0" class="h-w700-20-30">Ryan Lind</h4>
+                    <h4 data-w-id="350c7353-76da-f2dd-2eed-a261eb183e29" style="opacity:0" class="h-w700-20-30">Ryan</h4>
                     <h4 data-w-id="30ada500-02bb-9293-b4f1-6585f94fb7d9" style="opacity:0" class="h-w500-20-30">CEO</h4>
                   </div>
                   <p data-w-id="acb27c63-694f-4ed7-d7a8-83053a6bc050" style="opacity:0" class="p-w400-16-24">Ryan has been a passionate blockchain enthusiast since 2011, and began his journey by mining Bitcoin using a humble Antminer S3. In 2021, he left an indelible mark by establishing the first-ever NFT marketplace on Cardano. With an impressive roster of over 1000 registered projects, this ground breaking marketplace has achieved remarkable success, selling over 625,000 NFTs and generating over 130,000,000₳ in sales. <br><br>Leveraging expertise in business, marketing, andWeb3, Ryan elevated a Cardano NFT marketplace tonew heights. Recognising the need for a stellar team, he founded Block Recruit in 2023. Dedicated to global service across Web3, it excels in connecting professionals with roles in NFTs, Exchanges, DeFi, the Metaverse, and key positions.</p>
                 </div>
                 <div class="about-item">
-                  <div class="about-avatar-wrap"><img class="about-avatar" src="images/James-Circle.png" alt="" style="opacity:0" sizes="100vw" data-w-id="edaec284-edad-5e72-7aa6-6aa82098da8f" loading="lazy" srcset="images/James-Circle-p-500.png 500w, images/James-Circle-p-800.png 800w, images/James-Circle-p-1080.png 1080w, images/James-Circle-p-1600.png 1600w, images/James-Circle-p-2000.png 2000w, images/James-Circle.png 2400w"></div>
+                  <div class="about-avatar-wrap"><img class="about-avatar" src="images/James-Circle.png" alt="" style="opacity:0" sizes="180px" data-w-id="edaec284-edad-5e72-7aa6-6aa82098da8f" loading="lazy" srcset="images/James-Circle-p-500.png 500w, images/James-Circle-p-800.png 800w, images/James-Circle-p-1080.png 1080w, images/James-Circle-p-1600.png 1600w, images/James-Circle-p-2000.png 2000w, images/James-Circle.png 2400w"></div>
                   <div class="about-title">
-                    <h4 data-w-id="edaec284-edad-5e72-7aa6-6aa82098da91" style="opacity:0" class="h-w700-20-30">Mason Pointon</h4>
+                    <h4 data-w-id="edaec284-edad-5e72-7aa6-6aa82098da91" style="opacity:0" class="h-w700-20-30">Gus</h4>
                     <h4 data-w-id="edaec284-edad-5e72-7aa6-6aa82098da93" style="opacity:0" class="h-w500-20-30">Managing Director</h4>
                   </div>
-                  <p data-w-id="edaec284-edad-5e72-7aa6-6aa82098da95" style="opacity:0" class="p-w400-16-24">Mason’s seasoned recruitment prowess and leadership ensure the assembly of high-performing teams that propel your Web3 venture forward. Mason’s experience in IT Cybersecurity recruitment, filling 100+ positions with a remarkable 92%retention rate. Collaborating with 25+ esteemed companies, he placed over £5,000,000 worth of critical roles. Seeking a new challenge, Mason joined forces with Ryan to co-found Block Recruit, combining their recruitment and web3 expertise.</p>
+                  <p data-w-id="edaec284-edad-5e72-7aa6-6aa82098da95" style="opacity:0" class="p-w400-16-24">With a decade&#x27;s experience navigating diverse recruitment landscapes, Gus brings battle-tested wisdom to Block Recruit. He&#x27;s not just seen trends come and go - he&#x27;s mastered the art of building lasting teams, no matter the industry. From high-stakes executive searches to filling specialized tech roles, Gus&#x27;s track record speaks volumes.<br><br>His deep understanding of both full-time and contracting placements ensures your talent needs are met with precision, while his passion for Web3 and meme coins isn&#x27;t just a hobby - it&#x27;s a compass guiding Block Recruit&#x27;s success. Gus understands the unique challenges and opportunities in the decentralized finance space.<br><br>When the tech world gets turbulent, Gus is your steady anchor, making sure your talent acquisition strategy sails smoothly. His calm demeanor and strategic thinking bring a sense of stability to every search, while his genuine enthusiasm for connecting people with their dream roles shines through.</p>
                 </div>
               </div>
             </div>
@@ -275,7 +276,7 @@
                   <a href="about.html" class="p-w500-16-24">ABOUT</a>
                 </div>
                 <div class="footer-text">
-                  <p class="p-w400-16-24 texxt-color-white">© 2022-23 . All Rights Reserved</p>
+                  <p class="p-w400-16-24 texxt-color-white">© 2022-24 . All Rights Reserved</p>
                 </div>
               </div>
               <div id="w-node-_8046c900-8255-db51-33c3-030748d3998f-48d3997e" class="footer-social-media-wrap">
@@ -299,12 +300,7 @@
                     <div>hello@blockrecruit.io</div>
                   </a>
                 </div>
-                <div class="footer-cell-address-wrap">
-                  <a href="tel:+442080797525" class="link-block-2 w-inline-block">
-                    <div class="footer-mail-icon margin-right-18px"><img src="images/phone.svg" loading="lazy" alt=""></div>
-                    <div>+44 (0)208 0797 525</div>
-                  </a>
-                </div>
+                <div class="footer-cell-address-wrap"></div>
                 <div class="footer-publisher hide">
                   <p class="p-w400-16-24 texxt-color-white">© 2022 . All Right Reserved</p>
                 </div>
