--- a/hiring.html
+++ b/hiring.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 23 2024 10:33:54 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Sep 27 2024 11:40:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="630d16cb2cd6972b6bb1bad7" data-wf-site="6309a8f27ed27fa304d80a59" lang="en">
 <head>
   <meta charset="utf-8">
@@ -36,9 +36,7 @@
               <a href="#" class="mobile-brand w-nav-brand"><img src="images/logo-4.svg" loading="lazy" alt="" class="image-8"></a>
               <a href="hiring.html" aria-current="page" class="nav-link p-w500-16-24 w-nav-link w--current">I&#x27;M HIRING</a>
               <a href="job-hunting.html" class="nav-link p-w500-16-24 w-nav-link">I&#x27;M JOB HUNTING</a>
-              <a href="job-listings.html" class="nav-link p-w500-16-24 w-nav-link">SEARCH LATEST JOBS</a>
               <a href="about.html" class="nav-link p-w500-16-24 w-nav-link">ABOUT</a>
-              <a href="http://blog.blockrecruit.io" target="_blank" class="nav-link p-w500-16-24 w-nav-link">BLOG</a>
               <a href="job-post.html" class="navbar-btn w-button">HIRE TALENT</a>
             </div>
           </nav>
@@ -177,7 +175,7 @@
                 </div>
                 <p class="p-w400-20-30 text-color-white margin-bottom-24px">Our specialist recruiters are waiting to find your ideal candidate!</p>
                 <div class="schedule-btn">
-                  <a href="https://calendar.app.google/cP3XMUmR14gCbPDu6" target="_blank" class="home-header-left-btn bg-white w-inline-block">
+                  <a href="https://calendar.app.google/gP9HxqQZqQDUuiNG6" target="_blank" class="home-header-left-btn bg-white w-inline-block">
                     <div class="white-btn">
                       <div class="bell-icon marin-right-12px"><img src="images/Vector-29.svg" loading="lazy" alt=""></div>
                       <div class="p-w600-20-30 text-color-skyblue">SCHEDULE</div>
@@ -219,7 +217,7 @@
                   <div class="slide w-slide">
                     <div class="slide-wrapper">
                       <div class="slide-profile">
-                        <div class="slide-profile-img"><img src="images/Screenshot-2023-03-15-at-12.30.51.png" loading="lazy" width="105" sizes="(max-width: 479px) 19vw, (max-width: 767px) 13vw, (max-width: 991px) 11vw, (max-width: 1439px) 8vw, 105px" alt="" srcset="images/Screenshot-2023-03-15-at-12.30.51-p-500.png 500w, images/Screenshot-2023-03-15-at-12.30.51.png 530w"></div>
+                        <div class="slide-profile-img"><img src="images/Screenshot-2023-03-15-at-12.30.51.png" loading="lazy" width="105" sizes="(max-width: 479px) 21vw, (max-width: 767px) 14vw, (max-width: 991px) 11vw, (max-width: 1279px) 8vw, 105px" alt="" srcset="images/Screenshot-2023-03-15-at-12.30.51-p-500.png 500w, images/Screenshot-2023-03-15-at-12.30.51.png 530w"></div>
                         <div class="slide-profile-info">
                           <h1 class="h-w700-20-30 margin-bottom-8px">Elias Rahaniotis</h1>
                           <div class="p-w600-16-24">Junior Product Operations - <a href="#" class="link-5"><span class="text-span-27">Ex-Polygon Labs</span></a>
@@ -234,7 +232,7 @@
                   <div class="slide w-slide">
                     <div class="slide-wrapper">
                       <div class="slide-profile">
-                        <div class="slide-profile-img"><img src="images/1677574281716.jpeg" loading="lazy" width="105" sizes="(max-width: 479px) 22vw, (max-width: 767px) 16vw, (max-width: 991px) 13vw, (max-width: 1279px) 9vw, 105px" alt="" srcset="images/1677574281716-p-500.jpeg 500w, images/1677574281716-p-800.jpeg 800w, images/1677574281716.jpeg 800w"></div>
+                        <div class="slide-profile-img"><img src="images/1677574281716.jpeg" loading="lazy" width="105" sizes="(max-width: 479px) 22vw, (max-width: 767px) 18vw, (max-width: 991px) 105px, (max-width: 1279px) 10vw, 105px" alt="" srcset="images/1677574281716-p-500.jpeg 500w, images/1677574281716-p-800.jpeg 800w, images/1677574281716.jpeg 800w"></div>
                         <div class="slide-profile-info">
                           <h1 class="h-w700-20-30 margin-bottom-8px">Gurlal Deep Singh</h1>
                           <div class="p-w600-16-24">3D Motion Designer - <a href="#" class="link"><span class="text-span-28">Freelancer</span></a>
@@ -249,7 +247,7 @@
                   <div class="slide w-slide">
                     <div class="slide-wrapper">
                       <div class="slide-profile">
-                        <div class="slide-profile-img"><img src="images/1622113855333.jpeg" loading="lazy" width="105" sizes="(max-width: 479px) 19vw, (max-width: 767px) 12vw, (max-width: 991px) 11vw, (max-width: 1439px) 8vw, 105px" alt="" srcset="images/1622113855333-p-500.jpeg 500w, images/1622113855333-p-800.jpeg 800w, images/1622113855333.jpeg 800w" class="image-11"></div>
+                        <div class="slide-profile-img"><img src="images/1622113855333.jpeg" loading="lazy" width="105" sizes="(max-width: 479px) 21vw, (max-width: 767px) 13vw, (max-width: 991px) 11vw, (max-width: 1279px) 8vw, 105px" alt="" srcset="images/1622113855333-p-500.jpeg 500w, images/1622113855333-p-800.jpeg 800w, images/1622113855333.jpeg 800w" class="image-11"></div>
                         <div class="slide-profile-info">
                           <h1 class="h-w700-20-30 margin-bottom-8px">Josh David</h1>
                           <div class="p-w600-16-24">Digital Marketing Executive - <a href="#" class="link-4"><span class="text-span-27">Self-employed</span></a>
@@ -330,7 +328,7 @@
         </div>
       </div>
       <div class="div-block-13">
-        <a href="#CTA" class="seeking-header-left-btn cnt w-inline-block">
+        <a href="https://calendar.app.google/gP9HxqQZqQDUuiNG6" target="_blank" class="seeking-header-left-btn cnt w-inline-block">
           <div class="employers-header-btn">
             <div class="bell-icon marin-right-12px down-arrow"><img src="images/call-white.svg" loading="lazy" alt="" class="image-12"></div>
             <div class="p-w600-20-30">Schedule a call</div>
@@ -397,7 +395,7 @@
                   <a href="about.html" class="p-w500-16-24">ABOUT</a>
                 </div>
                 <div class="footer-text">
-                  <p class="p-w400-16-24 texxt-color-white">© 2022-23 . All Rights Reserved</p>
+                  <p class="p-w400-16-24 texxt-color-white">© 2022-24 . All Rights Reserved</p>
                 </div>
               </div>
               <div id="w-node-_8046c900-8255-db51-33c3-030748d3998f-48d3997e" class="footer-social-media-wrap">
@@ -421,12 +419,7 @@
                     <div>hello@blockrecruit.io</div>
                   </a>
                 </div>
-                <div class="footer-cell-address-wrap">
-                  <a href="tel:+442080797525" class="link-block-2 w-inline-block">
-                    <div class="footer-mail-icon margin-right-18px"><img src="images/phone.svg" loading="lazy" alt=""></div>
-                    <div>+44 (0)208 0797 525</div>
-                  </a>
-                </div>
+                <div class="footer-cell-address-wrap"></div>
                 <div class="footer-publisher hide">
                   <p class="p-w400-16-24 texxt-color-white">© 2022 . All Right Reserved</p>
                 </div>
