--- a/job-listings.html
+++ b/job-listings.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 23 2024 10:33:54 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Sep 27 2024 11:40:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63fef0a457c2b77df0754f49" data-wf-site="6309a8f27ed27fa304d80a59" lang="en">
 <head>
   <meta charset="utf-8">
@@ -76,67 +76,7 @@
                   <a href="job-post.html" class="home-header-left-btn jp-btn w-button"> + Post a job</a>
                 </div>
               </div>
-              <div class="job-list">
-                <div class="w-dyn-list">
-                  <div fs-cmsnest-element="list" role="list" class="collection-list w-dyn-items">
-                    <div role="listitem" class="w-dyn-item">
-                      <div data-w-id="e7cca58c-f67e-09e6-f979-7c7319da48e0" style="opacity:0;-webkit-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="job-listing-component">
-                        <a href="#" class="company-logo w-inline-block"><img loading="lazy" alt="" src="" class="image-34 w-dyn-bind-empty"></a>
-                        <div class="job-details-wrap">
-                          <a href="#" class="job-details-top w-inline-block">
-                            <h1 class="h-w700-20-30 m-b-10 text-weght-600 w-dyn-bind-empty"></h1>
-                            <div class="p-w400-16-24 w-dyn-bind-empty"></div>
-                          </a>
-                          <div class="job-details-bottom">
-                            <div class="tag-component">
-                              <div class="wage-wrap">
-                                <div class="wage-image"><img loading="lazy" alt="" src="" class="image-33 w-dyn-bind-empty"></div>
-                                <p class="p-w400-16-24 texxt-color-white w-dyn-bind-empty"></p>
-                              </div>
-                              <div fs-cmsnest-collection="Tags" class="alltag-wrap">
-                                <div class="w-dyn-list">
-                                  <div role="list" class="collection-list-2 w-dyn-items">
-                                    <div role="listitem" class="w-dyn-item">
-                                      <div fs-cmsnest-collection="Tags" class="tag-wrap">
-                                        <div class="wage-image"><img src="" loading="lazy" alt="" class="w-dyn-bind-empty"></div>
-                                        <p class="p-w400-16-24 texxt-color-white w-dyn-bind-empty"></p>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="button-wrap">
-                              <a href="#talent" class="job-apply-btn w-inline-block">
-                                <div>
-                                  <div class="employers-header-btn">
-                                    <div class="p-w400-16-24 texxt-color-white">See More</div>
-                                  </div>
-                                </div>
-                              </a>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="w-dyn-empty">
-                    <div>No items found.</div>
-                  </div>
-                  <div role="navigation" aria-label="List" class="w-pagination-wrapper">
-                    <a href="#" aria-label="Previous Page" class="w-pagination-previous job-apply-btn"><svg class="w-pagination-previous-icon icon-3" height="12px" width="12px" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 12 12" transform="translate(0, 1)">
-                        <path fill="none" stroke="currentColor" fill-rule="evenodd" d="M8 10L4 6l4-4"></path>
-                      </svg>
-                      <div class="text-block-3 w-inline-block">Previous</div>
-                    </a>
-                    <a href="#" aria-label="Next Page" class="w-pagination-next job-apply-btn">
-                      <div class="text-block-2 w-inline-block">Next</div><svg class="w-pagination-next-icon icon-2" height="12px" width="12px" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 12 12" transform="translate(0, 1)">
-                        <path fill="none" stroke="currentColor" fill-rule="evenodd" d="M4 2l4 4-4 4"></path>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </div>
+              <div class="job-list"></div>
             </div>
           </div>
         </div>
@@ -153,21 +93,12 @@
                 </div>
                 <p class="p-w400-20-30 text-color-white margin-bottom-24px">We accept Fiat and all Major Crypto Currencies</p>
                 <div class="schedule-btn">
-                  <a href="https://calendar.app.google/cP3XMUmR14gCbPDu6" target="_blank" class="home-header-left-btn bg-white w-inline-block">
+                  <a href="https://calendar.app.google/gP9HxqQZqQDUuiNG6" target="_blank" class="home-header-left-btn bg-white w-inline-block">
                     <div class="white-btn">
                       <div class="bell-icon marin-right-12px"><img src="images/Vector-29.svg" loading="lazy" alt=""></div>
                       <div class="p-w600-20-30 text-color-skyblue">SCHEDULE</div>
                     </div>
                   </a>
-                  <a href="tel:+442080797525" class="home-header-left-btn bg-white w-inline-block">
-                    <div class="white-btn">
-                      <div class="bell-icon marin-right-12px"><img src="images/Frame-8.svg" loading="lazy" alt=""></div>
-                      <div class="p-w600-20-30 text-color-skyblue">CALL NOW</div>
-                    </div>
-                  </a>
-                </div>
-                <div>
-                  <p class="p-w400-16-24 texxt-color-white">Don&#x27;t forget to ask us about <span class="text-span-29">$BLOCK</span></p>
                 </div>
               </div>
             </div>
@@ -234,7 +165,7 @@
                   <a href="about.html" class="p-w500-16-24">ABOUT</a>
                 </div>
                 <div class="footer-text">
-                  <p class="p-w400-16-24 texxt-color-white">© 2022-23 . All Rights Reserved</p>
+                  <p class="p-w400-16-24 texxt-color-white">© 2022-24 . All Rights Reserved</p>
                 </div>
               </div>
               <div id="w-node-_8046c900-8255-db51-33c3-030748d3998f-48d3997e" class="footer-social-media-wrap">
@@ -258,12 +189,7 @@
                     <div>hello@blockrecruit.io</div>
                   </a>
                 </div>
-                <div class="footer-cell-address-wrap">
-                  <a href="tel:+442080797525" class="link-block-2 w-inline-block">
-                    <div class="footer-mail-icon margin-right-18px"><img src="images/phone.svg" loading="lazy" alt=""></div>
-                    <div>+44 (0)208 0797 525</div>
-                  </a>
-                </div>
+                <div class="footer-cell-address-wrap"></div>
                 <div class="footer-publisher hide">
                   <p class="p-w400-16-24 texxt-color-white">© 2022 . All Right Reserved</p>
                 </div>
