--- a/job-post.html
+++ b/job-post.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 23 2024 10:33:54 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Sep 27 2024 11:40:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6512e5843b9eba5d77504a30" data-wf-site="6309a8f27ed27fa304d80a59" lang="en">
 <head>
   <meta charset="utf-8">
@@ -31,9 +31,7 @@
               <a href="#" class="mobile-brand w-nav-brand"><img src="images/logo-4.svg" loading="lazy" alt="" class="image-8"></a>
               <a href="hiring.html" class="nav-link p-w500-16-24 w-nav-link">I&#x27;M HIRING</a>
               <a href="job-hunting.html" class="nav-link p-w500-16-24 w-nav-link">I&#x27;M JOB HUNTING</a>
-              <a href="job-listings.html" class="nav-link p-w500-16-24 w-nav-link">SEARCH LATEST JOBS</a>
               <a href="about.html" class="nav-link p-w500-16-24 w-nav-link">ABOUT</a>
-              <a href="http://blog.blockrecruit.io" target="_blank" class="nav-link p-w500-16-24 w-nav-link">BLOG</a>
               <a href="job-post.html" aria-current="page" class="navbar-btn w-button w--current">HIRE TALENT</a>
             </div>
           </nav>
@@ -222,7 +220,7 @@ document.currentScript.closest('.w-form').querySelectorAll('input[data-type]').f
                   <a href="about.html" class="p-w500-16-24">ABOUT</a>
                 </div>
                 <div class="footer-text">
-                  <p class="p-w400-16-24 texxt-color-white">© 2022-23 . All Rights Reserved</p>
+                  <p class="p-w400-16-24 texxt-color-white">© 2022-24 . All Rights Reserved</p>
                 </div>
               </div>
               <div id="w-node-_8046c900-8255-db51-33c3-030748d3998f-48d3997e" class="footer-social-media-wrap">
@@ -246,12 +244,7 @@ document.currentScript.closest('.w-form').querySelectorAll('input[data-type]').f
                     <div>hello@blockrecruit.io</div>
                   </a>
                 </div>
-                <div class="footer-cell-address-wrap">
-                  <a href="tel:+442080797525" class="link-block-2 w-inline-block">
-                    <div class="footer-mail-icon margin-right-18px"><img src="images/phone.svg" loading="lazy" alt=""></div>
-                    <div>+44 (0)208 0797 525</div>
-                  </a>
-                </div>
+                <div class="footer-cell-address-wrap"></div>
                 <div class="footer-publisher hide">
                   <p class="p-w400-16-24 texxt-color-white">© 2022 . All Right Reserved</p>
                 </div>
